--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "start": "./scripts/start.sh",
     "test": "run-s -s test:ts test:lint test:node",
     "test:build": "run-s lint test:ts test:server test:client",
-    "test:server": "node --test -r ts-node/register src/*.test.ts",
+    "test:server": "node --test -r ts-node/register src/**/*.test.ts",
     "test:client": "echo todo",
     "test:ts": "tsc --noEmit",
     "dev": "nodemon --watch server --watch server.ts --exec tsx server.ts",
     "build": "npm run clean && npm run build:client && npm run build:server",
     "lint": "sortpack && eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "build:client": "vite build --outDir dist/app/client",
-    "build:server": "tsc -p tsconfig.server.json && vite build --ssr src/entry-server.tsx --outDir dist/entry",
-    "clean": "rimraf dist",
-    "serve": "NODE_ENV=production node ./dist/app/server"
+    "build:client": "vite build --outDir lib/client",
+    "build:server": "tsc -p tsconfig.server.json && vite build --ssr src/client/entry-server.tsx --outDir lib/entry",
+    "clean": "rimraf lib",
+    "serve": "NODE_ENV=production node ./lib/server"
   },
   "repository": {
     "type": "git",
@@ -33,16 +33,12 @@
     "typescript"
   ],
   "dependencies": {
-    "@loadable/component": "5.16.3",
-    "express": "4.19.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-helmet-async": "2.0.4",
-    "react-router-dom": "6.22.3",
     "@koa/router": "12.0.1",
+    "@loadable/component": "5.16.3",
     "boring-cluster": "6.1.5",
     "dnscache": "1.0.2",
-    "koa": "2.15.0",
+    "express": "4.19.2",
+    "koa": "2.15.3",
     "koa-bodyparser": "4.4.1",
     "koa-cookie": "1.0.0",
     "koa-helmet": "7.0.2",
@@ -50,24 +46,29 @@
     "koa-lowercase": "2.1.4",
     "koa-simple-static": "4.1.2",
     "koa2-winston": "3.2.0",
-    "pg": "8.11.3",
+    "kysely": "0.27.3",
+    "pg": "8.11.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-helmet-async": "2.0.4",
+    "react-router-dom": "6.22.3",
     "typeorm": "0.3.20",
-    "winston": "3.11.0"
+    "winston": "3.13.0"
   },
   "devDependencies": {
     "@types/compression": "1.7.5",
     "@types/express": "4.17.21",
     "@types/koa": "2.15.0",
+    "@types/koa__router": "12.0.4",
     "@types/koa-bodyparser": "4.3.12",
     "@types/koa-compress": "4.0.6",
     "@types/koa-cookie": "1.0.3",
     "@types/koa-logger": "3.1.5",
-    "@types/koa__router": "12.0.4",
     "@types/loadable__component": "5.13.9",
-    "@types/node": "20.11.24",
-    "@types/pg": "8.11.2",
-    "@types/react": "18.2.75",
-    "@types/react-dom": "18.2.24",
+    "@types/node": "20.12.7",
+    "@types/pg": "8.11.5",
+    "@types/react": "18.2.77",
+    "@types/react-dom": "18.2.25",
     "@types/react-router-dom": "5.3.3",
     "@types/serve-static": "1.15.7",
     "@types/supertest": "6.0.2",
