chore: reorg more

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:server": "node --test -r ts-node/register src/**/*.test.ts",
     "test:client": "echo todo",
     "test:ts": "tsc --noEmit",
-    "dev": "nodemon --watch server --watch server.ts --exec tsx server.ts",
+    "dev": "nodemon --watch src/server --exec tsx server/src/index.ts",
     "build": "npm run clean && npm run build:client && npm run build:server",
     "lint": "sortpack && eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "build:client": "vite build --outDir lib/client",
@@ -37,7 +37,6 @@
     "@loadable/component": "5.16.3",
     "boring-cluster": "6.1.5",
     "dnscache": "1.0.2",
-    "express": "4.19.2",
     "koa": "2.15.3",
     "koa-bodyparser": "4.4.1",
     "koa-cookie": "1.0.0",
@@ -52,12 +51,10 @@
     "react-dom": "18.2.0",
     "react-helmet-async": "2.0.4",
     "react-router-dom": "6.22.3",
-    "typeorm": "0.3.20",
     "winston": "3.13.0"
   },
   "devDependencies": {
     "@types/compression": "1.7.5",
-    "@types/express": "4.17.21",
     "@types/koa": "2.15.0",
     "@types/koa__router": "12.0.4",
     "@types/koa-bodyparser": "4.3.12",
@@ -73,8 +70,8 @@
     "@types/serve-static": "1.15.7",
     "@types/supertest": "6.0.2",
     "@types/winston": "2.4.4",
-    "@typescript-eslint/eslint-plugin": "7.6.0",
-    "@typescript-eslint/parser": "7.6.0",
+    "@typescript-eslint/eslint-plugin": "7.5.0",
+    "@typescript-eslint/parser": "7.5.0",
     "@vitejs/plugin-react": "4.2.1",
     "compression": "1.7.4",
     "eslint": "8.57.0",
