chore: setup db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,26 @@
 version: "3"
 services:
-  node:
-    image: node:20-alpine
+  app:
+    container_name: app
+    image: node:21-alpine
+    depends_on:
+      - db
     working_dir: /app
     volumes:
       - ./package.json:/app/package.json:cached
       - ./node_modules:/app/node_modules:cached
       - ./scripts:/app/scripts:cached
       - ./src:/app/src:cached
-      - ./nodemon.json:/app/nodemon.json:cached
       - ./tsconfig.json:/app/tsconfig.json:cached
+      - ./index.html:/app/index.html:cached
     networks:
       - app
     command: npm run dev
     environment:
       NODE_ENV: development
-      PORT: 4000
+      PORT: 3000
     ports:
-      - "4000:4000"
+      - "3000:3000"
 
   db:
     container_name: db
