--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "react-dom": "18.2.0",
     "react-helmet-async": "2.0.4",
     "react-router-dom": "6.22.3",
+    "styled-components": "6.1.8",
+    "styled-reset": "4.5.2",
     "winston": "3.13.0"
   },
   "devDependencies": {
