--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "dnscache": "1.0.2",
     "koa": "2.15.3",
     "koa-bodyparser": "4.4.1",
+    "koa-compress": "5.1.1",
+    "koa-connect": "2.1.0",
     "koa-cookie": "1.0.0",
     "koa-helmet": "7.0.2",
     "koa-logger": "3.2.1",
@@ -88,6 +90,7 @@
     "ts-node": "10.9.2",
     "tsx": "4.7.2",
     "typescript": "5.4.5",
+    "vike": "0.4.168",
     "vite": "5.2.8"
   },
   "engines": {
