--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "run-s -s test:ts test:lint test:node",
     "test:build": "run-s lint test:ts test:server test:client",
     "test:server": "node --test -r ts-node/register src/**/*.test.ts",
-    "test:client": "echo todo",
+    "test:client": "vitest",
+    "test:client:ui": "vitest --ui",
     "test:ts": "tsc --noEmit",
     "dev": "nodemon --watch src/server --exec tsx src/server/index.ts",
     "build": "npm run clean && npm run build:client && npm run build:server",
@@ -58,6 +59,9 @@
     "winston": "3.13.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "15.0.2",
+    "@testing-library/user-event": "14.5.2",
     "@types/compression": "1.7.5",
     "@types/koa": "2.15.0",
     "@types/koa__router": "12.0.4",
@@ -77,10 +81,13 @@
     "@typescript-eslint/eslint-plugin": "7.5.0",
     "@typescript-eslint/parser": "7.5.0",
     "@vitejs/plugin-react": "4.2.1",
+    "@vitest/coverage-v8": "1.5.0",
+    "@vitest/ui": "1.5.0",
     "compression": "1.7.4",
     "eslint": "8.57.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.6",
+    "jsdom": "24.0.0",
     "nodemon": "3.1.0",
     "npm-run-all": "4.1.5",
     "rimraf": "5.0.5",
@@ -91,7 +98,8 @@
     "tsx": "4.7.2",
     "typescript": "5.4.5",
     "vike": "0.4.168",
-    "vite": "5.2.8"
+    "vite": "5.2.8",
+    "vitest": "1.5.0"
   },
   "engines": {
     "node": ">=21.0.0"
