--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "start": "./scripts/start.sh",
     "test": "run-s -s test:build test:lint test:node",
     "test:build": "run-s lint test:ts test:server test:client",
-    "test:client": "vitest",
-    "test:client:ui": "vitest --ui",
-    "test:server": "node --test -r ts-node/register src/**/*.test.ts",
+    "test:server": "NODE_ENV=test node --test -r ts-node/register src/server/tests/*",
+    "test:client": "NODE_ENV=test node --test -r ts-node/register src/client/tests/*",
     "test:ts": "tsc --noEmit"
   },
   "repository": {
@@ -30,9 +29,12 @@
   },
   "keywords": [
     "docker",
-    "jenkins",
+    "postgres",
     "microservice",
-    "typescript"
+    "typescript",
+    "koa",
+    "react",
+    "vite"
   ],
   "engines": {
     "node": ">=21.0.0"
@@ -63,20 +65,20 @@
     "zeelib": "12.1.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "15.0.2",
     "@testing-library/user-event": "14.5.2",
     "@types/compression": "1.7.5",
+    "@types/jsdom": "21.1.6",
     "@types/koa": "2.15.0",
+    "@types/koa__router": "12.0.4",
     "@types/koa-bodyparser": "4.3.12",
     "@types/koa-compress": "4.0.6",
     "@types/koa-cookie": "1.0.3",
     "@types/koa-logger-winston": "0.0.6",
-    "@types/koa__router": "12.0.4",
     "@types/loadable__component": "5.13.9",
     "@types/node": "20.12.7",
     "@types/pg": "8.11.5",
-    "@types/react": "18.2.77",
+    "@types/react": "18.2.78",
     "@types/react-dom": "18.2.25",
     "@types/react-router-dom": "5.3.3",
     "@types/serve-static": "1.15.7",
@@ -85,8 +87,6 @@
     "@typescript-eslint/eslint-plugin": "7.5.0",
     "@typescript-eslint/parser": "7.5.0",
     "@vitejs/plugin-react": "4.2.1",
-    "@vitest/coverage-v8": "1.5.0",
-    "@vitest/ui": "1.5.0",
     "compression": "1.7.4",
     "eslint": "8.57.0",
     "eslint-plugin-react-hooks": "4.6.0",
@@ -102,7 +102,6 @@
     "tsx": "4.7.2",
     "typescript": "5.4.5",
     "vike": "0.4.168",
-    "vite": "5.2.8",
-    "vitest": "1.5.0"
+    "vite": "5.2.8"
   }
 }
