--- a/package.json
+++ b/package.json
@@ -7,20 +7,19 @@
   "license": "MIT",
   "main": "lib/server/index.js",
   "scripts": {
-    "build": "npm run clean && npm run build:client && npm run build:server",
+    "build": "run-s clean build:client build:server",
     "build:client": "vite build --outDir lib/client",
-    "build:server": "tsc -p tsconfig.server.json && vite build --ssr src/client/entry-server.tsx --outDir lib/entry",
+    "build:server": "tsc -p tsconfig.server.json",
     "clean": "rimraf lib",
     "dev": "nodemon --watch src/server --exec tsx src/server/main.ts",
-    "lint": "sortpack && eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prebuild": "npm t",
-    "preversion": "npm t && npm run build",
+    "preversion": "run-s test build",
     "serve": "NODE_ENV=production node ./lib/server",
     "start": "./scripts/start.sh",
-    "test": "run-s -s test:build test:lint test:node",
-    "test:build": "run-s lint test:ts test:server test:client",
-    "test:server": "NODE_ENV=test node --test -r ts-node/register src/server/tests/*",
+    "test": "NODE_ENV=test run-s test:ts test:lint test:client test:server",
     "test:client": "NODE_ENV=test node --test -r ts-node/register src/client/tests/*",
+    "test:lint": "sortpack && eslint . --fix --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test:server": "NODE_ENV=test node --test -r ts-node/register src/server/tests/*",
     "test:ts": "tsc --noEmit"
   },
   "repository": {
@@ -29,11 +28,11 @@
   },
   "keywords": [
     "docker",
-    "postgres",
-    "microservice",
-    "typescript",
     "koa",
+    "microservice",
+    "postgres",
     "react",
+    "typescript",
     "vite"
   ],
   "engines": {
@@ -42,7 +41,6 @@
   "dependencies": {
     "@koa/router": "12.0.1",
     "@loadable/component": "5.16.3",
-    "boring-cluster": "6.1.5",
     "dnscache": "1.0.2",
     "koa": "2.15.3",
     "koa-bodyparser": "4.4.1",
@@ -70,11 +68,11 @@
     "@types/compression": "1.7.5",
     "@types/jsdom": "21.1.6",
     "@types/koa": "2.15.0",
-    "@types/koa__router": "12.0.4",
     "@types/koa-bodyparser": "4.3.12",
     "@types/koa-compress": "4.0.6",
     "@types/koa-cookie": "1.0.3",
     "@types/koa-logger-winston": "0.0.6",
+    "@types/koa__router": "12.0.4",
     "@types/loadable__component": "5.13.9",
     "@types/node": "20.12.7",
     "@types/pg": "8.11.5",
