--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": true,
+    "resolveJsonModule": true,
     "alwaysStrict": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
