--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
     "@vitejs/plugin-react": "4.2.1",
     "compression": "1.7.4",
     "eslint": "8.57.0",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-import": "2.29.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.6",
     "jsdom": "24.0.0",
