--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "pg": "8.11.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-helmet-async": "2.0.4",
     "react-router-dom": "6.22.3",
     "styled-components": "6.1.8",
     "styled-reset": "4.5.2",
@@ -91,6 +90,7 @@
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.6",
+    "global-jsdom": "24.0.0",
     "jsdom": "24.0.0",
     "nodemon": "3.1.0",
     "npm-run-all": "4.1.5",
