--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,5 +13,5 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: latest
-      - run: npm ci
-      - run: npm run build
+      - run: ./scripts/lint-shell-docker.sh
+      - run: docker build -t foo .
