--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,4 +14,5 @@ jobs:
         with:
           node-version: latest
       - run: ./scripts/lint-shell-docker.sh
-      - run: docker build -t foo .
+      - run: npm ci
+      - run: npm run build
