chore: test ci (#1)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,5 +13,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: latest
+      - run: ./scripts/lint-shell-docker.sh
       - run: npm ci
       - run: npm run build
