--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "preversion": "run-s build",
     "serve": "NODE_ENV=production node ./lib/server",
     "start": "./scripts/start.sh",
+    "storybook": "storybook dev -p 3003 --no-open",
     "test": "NODE_ENV=test run-s test:ts test:lint test:client test:server",
     "test:client": "NODE_ENV=test node --test -r ts-node/register src/client/tests/*",
     "test:lint": "sortpack && eslint . --fix --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -62,16 +63,22 @@
     "zeelib": "12.1.1"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "8.0.9",
+    "@storybook/addon-interactions": "8.0.9",
+    "@storybook/addon-links": "8.0.9",
+    "@storybook/blocks": "8.0.9",
+    "@storybook/react": "8.0.9",
+    "@storybook/react-vite": "8.0.9",
     "@testing-library/react": "15.0.2",
     "@testing-library/user-event": "14.5.2",
     "@types/compression": "1.7.5",
     "@types/jsdom": "21.1.6",
     "@types/koa": "2.15.0",
+    "@types/koa__router": "12.0.4",
     "@types/koa-bodyparser": "4.3.12",
     "@types/koa-compress": "4.0.6",
     "@types/koa-cookie": "1.0.3",
     "@types/koa-logger-winston": "0.0.6",
-    "@types/koa__router": "12.0.4",
     "@types/loadable__component": "5.13.9",
     "@types/node": "20.12.7",
     "@types/pg": "8.11.5",
@@ -97,6 +104,7 @@
     "rimraf": "5.0.5",
     "serve-static": "1.15.0",
     "sortpack": "2.4.0",
+    "storybook": "8.0.9",
     "supertest": "6.3.4",
     "ts-node": "10.9.2",
     "tsx": "4.7.2",
